# datafusion-python

./: Cargo.toml  Dockerfile  Dockerfile-build-wheel.arm64  Dockerfile-build-wheel.x86_64  build-linux-arm64.sh  build-linux-x86_64.sh  build-linux.sh  pyproject.toml
.github/workflows/: build.yml
python/datafusion/: __init__.py  context.py  dataframe.py
src/: context.rs  dataframe.rs  dataset_exec.rs  functions.rs  lib.rs  physical_plan.rs  substrait.rs  udf.rs  udwf.rs
