# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "datafusion-python"
version = "49.0.0"
homepage = "https://datafusion.apache.org/python"
repository = "https://github.com/apache/datafusion-python"
authors = ["Apache DataFusion <dev@datafusion.apache.org>"]
description = "Apache DataFusion DataFrame and SQL Query Engine"
readme = "README.md"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.78"
include = ["/src", "/datafusion", "/LICENSE.txt", "build.rs", "pyproject.toml", "Cargo.toml", "Cargo.lock"]

[features]
default = ["mimalloc"]
protoc = [ "datafusion-substrait/protoc" ]
substrait = ["dep:datafusion-substrait"]

[dependencies]
tokio = { version = "1.45", features = ["macros", "rt", "rt-multi-thread", "sync"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3", "abi3-py39"] }
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"]}
pyo3-log = "0.12.4"
arrow = { version = "55.1.0", features = ["pyarrow"] }
datafusion = { version = "49.0.2", features = ["avro", "unicode_expressions"] }
datafusion-substrait = { version = "49.0.2", optional = true }
datafusion-proto = { version = "49.0.2" }
datafusion-ffi = { version = "49.0.2" }
prost = "0.13.1" # keep in line with `datafusion-substrait`
uuid = { version = "1.18", features = ["v4"] }
mimalloc = { version = "0.1", optional = true, default-features = false, features = ["local_dynamic_tls"] }
async-trait = "0.1.89"
futures = "0.3"
object_store = { version = "0.12.3", features = ["aws", "gcp", "azure", "http"] }
url = "2"
log = "0.4.27"
deltalake = { version = "0.28.0", features = ["datafusion", "azure", "s3"] }
env_logger = "0.11.7"

[build-dependencies]
prost-types = "0.13.1" # keep in line with `datafusion-substrait`
pyo3-build-config = "0.24"

[lib]
name = "datafusion_python"
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = false
codegen-units = 1

[patch.crates-io]
datafusion = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-catalog = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-catalog-listing = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-common-runtime = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-datasource = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-datasource-avro = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-datasource-csv = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-datasource-json = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-datasource-parquet = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-execution = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-expr = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-expr-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-ffi = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-aggregate = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-aggregate-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-nested = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-table = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-window = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-functions-window-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-optimizer = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-physical-expr = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-physical-expr-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-physical-optimizer = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-physical-plan = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-proto = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-proto-common = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-session = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-sql = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
datafusion-substrait = { git = 'https://github.com/hstack/datafusion.git', branch = 'main' }
deltalake = { git = 'https://github.com/hstack/delta-rs.git', branch = 'main' }
reqwest = { git = 'https://github.com/hstack/reqwest.git', branch = 'main' }
